Thu Oct  6 14:59:11 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/time.rb:  Clean up Time documentation.  Patch by Jake Goulding.
	  [Ruby 1.9 - Bug #5416]

Thu Oct  6 10:00:54 2011  Eric Hodel  <drbrain@segment7.net>

	* enum.c (group_by):  Improve documentation based on patch by b t.

Thu Oct  6 09:56:30 2011  Eric Hodel  <drbrain@segment7.net>

	* enum.c:  Clean up wording in Enumerable documentation.  Patch by b t.
	  [Ruby 1.9 - Bug #5411]

Thu Oct  6 09:17:18 2011  Eric Hodel  <drbrain@segment7.net>

	* time.c (Init_Time):  Remove editorial comments from Time
	  documentation, fix link.

Thu Oct  6 09:14:20 2011  Eric Hodel  <drbrain@segment7.net>

	* time.c (Init_Time):  Improve Time documentation.  Patch by Shane
	  Emmons.  [Ruby 1.9 - Bug #5404]
	* lib/time.rb:  Improve time.rb documentation including Time.strptime.
	  Patch by Shane Emmons.  [Ruby 1.9 - Bug #5402]

Thu Oct  6 08:54:05 2011  Eric Hodel  <drbrain@segment7.net>

	* random.c:  Improve documentation of Random.  Patch by Gregory
	  Parkhurst.  [Ruby 1.9 - Bug #5410]

Thu Oct  6 01:44:51 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* cont.c (cont_mark): mark original Thread object from saved_thread.
	  [ruby-dev:44571] [Bug #5386]

Wed Oct  5 16:33:04 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_insnhelper.c (vm_call_cfunc): remove useless hack.

Wed Oct  5 05:56:39 2011  Eric Hodel  <drbrain@segment7.net>

	* hash.c (Init_Hash):  Improve Hash documentation.  Patch by Alvaro
	  Pereyra Rabanal.  [Ruby 1.9 - Bug #5405]

Wed Oct  5 05:47:59 2011  Eric Hodel  <drbrain@segment7.net>

	* random.c (Init_Random):  Add a top-level comment for Random.  Patch
	  by Brett Bim.  [Ruby 1.9 - Bug #5403]

Wed Oct  5 02:50:27 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/syntax_error.rb: Add file, line, offset, and
	  message attributes during parse failure.
	* ext/psych/parser.c: Update parser to raise exception with correct
	  values.