@@ -226,4 +226,8 @@ static VALUE ruby_vm_global_state_version = 1;
 } while (0)
 static void vm_clear_all_cache(void);
 
+static VALUE make_no_method_execption(VALUE exc, const char *format,
+				      VALUE obj, int argc, const VALUE *argv);
+
+
 #endif /* RUBY_INSNHELPER_H */
